# nornir-nhost

./: .env.development  .gitignore  Makefile  README.md  flake.nix  pyproject.toml  setup.cfg
nhost/: config.yaml
nhost/metadata/databases/default/tables/: nornir_events_task_executions.yaml  nornir_events_task_instance.yaml  tables.yaml
nhost/migrations/default/1643380224373_create_schema_nornir_events/: down.sql  up.sql
nhost/migrations/default/1643380462946_create_table_nornir_events_task_executions/: down.sql  up.sql
nhost/migrations/default/1643381033282_alter_table_nornir_events_task_executions_add_column_args/: down.sql  up.sql
nhost/migrations/default/1643385941157_create_table_nornir_events_task_instance/: down.sql  up.sql
nhost/migrations/default/1643386126493_alter_table_nornir_events_task_instance_add_column_host/: down.sql  up.sql
nhost/migrations/default/1643386540135_alter_table_nornir_events_task_instance_alter_column_success/: down.sql  up.sql
nhost/migrations/default/1643386550046_alter_table_nornir_events_task_instance_alter_column_completed/: down.sql  up.sql
nhost/migrations/default/1643391447887_alter_table_nornir_events_task_instance_drop_column_completed/: down.sql  up.sql
nix/: nhost-cli.nix  overlay.nix
nornir_nhost/plugins/processors/: __init__.py
tests/: config.yaml  conftest.py  test_processor.py
tests/inventory/: hosts.yaml
